@@ -157,6 +157,12 @@ clean-srcs:
 <%# vim: set ft=eruby noexpandtab ts=8 sw=2 : -%>
 
 # AUTOGENERATED DEPENDENCIES START
+enc/ascii.$(OBJEXT): $(top_srcdir)/regenc.h
+enc/ascii.$(OBJEXT): config.h
+enc/ascii.$(OBJEXT): defines.h
+enc/ascii.$(OBJEXT): enc/ascii.c
+enc/ascii.$(OBJEXT): missing.h
+enc/ascii.$(OBJEXT): oniguruma.h
 enc/big5.$(OBJEXT): $(top_srcdir)/regenc.h
 enc/big5.$(OBJEXT): config.h
 enc/big5.$(OBJEXT): defines.h
@@ -492,6 +498,15 @@ enc/trans/korean.$(OBJEXT): intern.h
 enc/trans/korean.$(OBJEXT): missing.h
 enc/trans/korean.$(OBJEXT): st.h
 enc/trans/korean.$(OBJEXT): subst.h
+enc/trans/newline.$(OBJEXT): $(hdrdir)/ruby/ruby.h
+enc/trans/newline.$(OBJEXT): $(top_srcdir)/transcode_data.h
+enc/trans/newline.$(OBJEXT): config.h
+enc/trans/newline.$(OBJEXT): defines.h
+enc/trans/newline.$(OBJEXT): enc/trans/newline.c
+enc/trans/newline.$(OBJEXT): intern.h
+enc/trans/newline.$(OBJEXT): missing.h
+enc/trans/newline.$(OBJEXT): st.h
+enc/trans/newline.$(OBJEXT): subst.h
 enc/trans/single_byte.$(OBJEXT): $(hdrdir)/ruby/ruby.h
 enc/trans/single_byte.$(OBJEXT): $(top_srcdir)/transcode_data.h
 enc/trans/single_byte.$(OBJEXT): config.h
@@ -521,6 +536,25 @@ enc/trans/utf_16_32.$(OBJEXT): intern.h
 enc/trans/utf_16_32.$(OBJEXT): missing.h
 enc/trans/utf_16_32.$(OBJEXT): st.h
 enc/trans/utf_16_32.$(OBJEXT): subst.h
+enc/unicode.$(OBJEXT): $(hdrdir)/ruby/ruby.h
+enc/unicode.$(OBJEXT): $(top_srcdir)/regenc.h
+enc/unicode.$(OBJEXT): $(top_srcdir)/regint.h
+enc/unicode.$(OBJEXT): config.h
+enc/unicode.$(OBJEXT): defines.h
+enc/unicode.$(OBJEXT): enc/unicode.c
+enc/unicode.$(OBJEXT): enc/unicode/casefold.h
+enc/unicode.$(OBJEXT): enc/unicode/name2ctype.h
+enc/unicode.$(OBJEXT): intern.h
+enc/unicode.$(OBJEXT): missing.h
+enc/unicode.$(OBJEXT): oniguruma.h
+enc/unicode.$(OBJEXT): st.h
+enc/unicode.$(OBJEXT): subst.h
+enc/us_ascii.$(OBJEXT): $(top_srcdir)/regenc.h
+enc/us_ascii.$(OBJEXT): config.h
+enc/us_ascii.$(OBJEXT): defines.h
+enc/us_ascii.$(OBJEXT): enc/us_ascii.c
+enc/us_ascii.$(OBJEXT): missing.h
+enc/us_ascii.$(OBJEXT): oniguruma.h
 enc/utf_16be.$(OBJEXT): $(top_srcdir)/regenc.h
 enc/utf_16be.$(OBJEXT): config.h
 enc/utf_16be.$(OBJEXT): defines.h
@@ -545,6 +579,12 @@ enc/utf_32le.$(OBJEXT): defines.h
 enc/utf_32le.$(OBJEXT): enc/utf_32le.c
 enc/utf_32le.$(OBJEXT): missing.h
 enc/utf_32le.$(OBJEXT): oniguruma.h
+enc/utf_8.$(OBJEXT): $(top_srcdir)/regenc.h
+enc/utf_8.$(OBJEXT): config.h
+enc/utf_8.$(OBJEXT): defines.h
+enc/utf_8.$(OBJEXT): enc/utf_8.c
+enc/utf_8.$(OBJEXT): missing.h
+enc/utf_8.$(OBJEXT): oniguruma.h
 enc/windows_1251.$(OBJEXT): $(top_srcdir)/regenc.h
 enc/windows_1251.$(OBJEXT): config.h
 enc/windows_1251.$(OBJEXT): defines.h
